--- a/index.html
+++ b/index.html
@@ -73,160 +73,51 @@
         </section>
 
         <!-- MIDDLE SECTION -->
-        <section class="works" id="portfolio">
-            <setion class="middlesection">
-                <div class="middlesection-container">
+        <div class="modal-container">
+            <div class="modal">
+                <span class="modal-close-btn">
+                    <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M0.292893 0.292893C0.683417 -0.0976311 1.31658 -0.0976311 1.70711 0.292893L7 5.58579L12.2929 0.292893C12.6834 -0.0976311 13.3166 -0.0976311 13.7071 0.292893C14.0976 0.683417 14.0976 1.31658 13.7071 1.70711L8.41421 7L13.7071 12.2929C14.0976 12.6834 14.0976 13.3166 13.7071 13.7071C13.3166 14.0976 12.6834 14.0976 12.2929 13.7071L7 8.41421L1.70711 13.7071C1.31658 14.0976 0.683417 14.0976 0.292893 13.7071C-0.0976311 13.3166 -0.0976311 12.6834 0.292893 12.2929L5.58579 7L0.292893 1.70711C-0.0976311 1.31658 -0.0976311 0.683417 0.292893 0.292893Z"
+                            fill="#67798E" />
+                    </svg>
+                </span>
+                <h2 class="modal-header" id="popuptitle"></h2>
 
-                    <div class="middlesection_header">
-                        <h2 class="middlesection_header_title">My Recent Works</h2>
-                        <div class="line_container">
-                            <hr>
+                <ul id="modallanguages" class="lang-list-ul modal-list"></ul>
 
+                <div class="modal-content">
+                    <div class="img-container">
+                        <img src="#" alt="project" id="modal-img" />
+                    </div>
+                    <div class="modal-paragraph">
+                        <p class="modal-description" id="modal-description"></p>
+                        <div class="modal-btn-container">
+                            <a href="#" class="sourcelink smallprimarybtn" id="livelink">
+                                <span>See More</span>
+                                <img src="/Assets/logos/see-live.png" alt="icon">
+                            </a>
+                            <a href="#" class="sourcelink smallprimarybtn" id="source">
+                                <span>See source</span>
+                                <svg width="18" height="20" viewBox="0 0 18 20" color="#fff" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M17.9989 7.46114C17.9989 6.32124 17.6329 5.25043 16.9342 4.31779C17.2004 3.41969 17.2669 2.27979 17.2004 0.967185C17.1671 0.414508 16.7345 0 16.2022 0C15.9028 0 13.3741 0.0345423 11.9101 1.38169C10.6458 1.1399 9.31495 1.1399 8.01736 1.38169C6.58667 0.0345423 4.05802 0 3.7253 0C3.19296 0 2.76042 0.414508 2.72715 0.967185C2.62734 2.27979 2.72715 3.41969 2.99333 4.31779C2.29462 5.28497 1.92863 6.35579 1.92863 7.46114C1.92863 9.8791 3.7253 12.0553 6.45358 13.0915C6.35377 13.2988 6.28723 13.5406 6.22068 13.7824C3.32604 13.4715 1.9619 10.7427 1.89536 10.639C1.66246 10.1209 1.06357 9.91364 0.56449 10.19C0.0654144 10.4318 -0.134216 11.0535 0.131958 11.5717C0.198501 11.7444 2.02845 15.4404 6.05432 15.8549V18.9637C6.05432 19.5509 6.48686 20 7.05248 20H12.875C13.4406 20 13.8732 19.5509 13.8732 18.9637V14.8532C13.8732 14.2314 13.7401 13.6442 13.5072 13.1261C16.2022 12.0553 17.9989 9.91364 17.9989 7.46114Z"
+                                        fill="#fff" />
+                                </svg>
+
+                            </a>
                         </div>
                     </div>
-
-                    <div class="midddlesection_image_container">
-                        <img class="middlesection-image" src="./Assets/images/middlesectionimage.png"
-                            alt="middle section image" />
-                        <div class="middlesection_texts_container">
-                            <h3 class="multiples-stories_header">Multi-Post Stories</h3>
-                            <p class="multiples-stories_paragraph">A daily selection of privately personalized reads;
-                                no accounts or sign-ups required. has been the industry's standard dummy
-                                text ever since the 1500s, when an unknown printer took a standard dummy text.
-                            </p>
-                            <section class="button-flex">
-                                <ul class="buttons">
-
-                                    <li><button class="default-btn">CSS</button></li>
-                                    <li><button class="default-btn">HTML</button></li>
-                                    <li><button class="default-btn">Bootstrap</button></li>
-                                    <li><button class="default-btn">Ruby</button></li>
-                                </ul>
-                            </section>
-
-                            <div class="multiple-btn-container">
-                                <button class="smallprimarybtn">See Project</button>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
-
-
-            </setion>
-
-
+            </div>
+        </div>
+        <section class="works" id="portfolio">
+            <setion class="middlesection" id="professional_art_printing-section"></setion>
 
             <section class="card-section">
                 <!-- PROFESSION ART PRINTING -->
-                <section class="professional_art_printing-section">
-                    <div class="professional_art_printing-section-items">
-                        <div class="art_print_container">
-                            <h2 class="art_print_header">Profesional Art Printing Data</h2>
-                            <p class="art_print_paragraph">
-                                A daily selection of privately personalized reads; no accounts or
-                                sign-ups required. Has been the industry's standard.
-                            </p>
-                            <ul class="art_print_btn_container">
-                                <li><button class="transparent-btn">HTML</button></li>
-                                <li><button class="transparent-btn">Bootstrap</button></li>
-                                <li><button class="transparent-btn">Ruby</button></li>
-                            </ul>
-                        </div>
-                        <div class="art-main-btn-container">
-                            <button class="primarybtn">See Project</button>
-                        </div>
-                    </div>
-
-                    <div class="professional_art_printing-section-items">
-                        <div class="art_print_container">
-                            <h2 class="art_print_header">Profesional Art Printing Data</h2>
-                            <p class="art_print_paragraph">
-                                A daily selection of privately personalized reads; no accounts or
-                                sign-ups required. Has been the industry's standard.
-                            </p>
-                            <ul class="art_print_btn_container">
-                                <li><button class="transparent-btn">HTML</button></li>
-                                <li><button class="transparent-btn">Bootstrap</button></li>
-                                <li><button class="transparent-btn">Ruby</button></li>
-                            </ul>
-                        </div>
-                        <div class="art-main-btn-container">
-                            <button class="primarybtn">See Project</button>
-                        </div>
-                    </div>
-
-                    <div class="professional_art_printing-section-items">
-                        <div class="art_print_container">
-                            <h2 class="art_print_header">Profesional Art Printing Data</h2>
-                            <p class="art_print_paragraph">
-                                A daily selection of privately personalized reads; no accounts or
-                                sign-ups required. Has been the industry's standard.
-                            </p>
-                            <ul class="art_print_btn_container">
-                                <li><button class="transparent-btn">HTML</button></li>
-                                <li><button class="transparent-btn">Bootstrap</button></li>
-                                <li><button class="transparent-btn">Ruby</button></li>
-                            </ul>
-                        </div>
-                        <div class="art-main-btn-container">
-                            <button class="primarybtn">See Project</button>
-                        </div>
-                    </div>
-                    <div class="professional_art_printing-section-items">
-                        <div class="art_print_container">
-                            <h2 class="art_print_header">Profesional Art Printing Data</h2>
-                            <p class="art_print_paragraph">
-                                A daily selection of privately personalized reads; no accounts or
-                                sign-ups required. Has been the industry's standard.
-                            </p>
-                            <ul class="art_print_btn_container">
-                                <li><button class="transparent-btn">HTML</button></li>
-                                <li><button class="transparent-btn">Bootstrap</button></li>
-                                <li><button class="transparent-btn">Ruby</button></li>
-                            </ul>
-                        </div>
-                        <div class="art-main-btn-container">
-                            <button class="primarybtn">See Project</button>
-                        </div>
-                    </div>
-
-                    <div class="professional_art_printing-section-items">
-                        <div class="art_print_container">
-                            <h2 class="art_print_header">Profesional Art Printing Data</h2>
-                            <p class="art_print_paragraph">
-                                A daily selection of privately personalized reads; no accounts or
-                                sign-ups required. Has been the industry's standard.
-                            </p>
-                            <ul class="art_print_btn_container">
-                                <li><button class="transparent-btn">HTML</button></li>
-                                <li><button class="transparent-btn">Bootstrap</button></li>
-                                <li><button class="transparent-btn">Ruby</button></li>
-                            </ul>
-                        </div>
-                        <div class="art-main-btn-container">
-                            <button class="primarybtn">See Project</button>
-                        </div>
-                    </div>
-
-                    <div class="professional_art_printing-section-items">
-                        <div class="art_print_container">
-                            <h2 class="art_print_header">Profesional Art Printing Data</h2>
-                            <p class="art_print_paragraph">
-                                A daily selection of privately personalized reads; no accounts or
-                                sign-ups required. Has been the industry's standard.
-                            </p>
-                            <ul class="art_print_btn_container">
-                                <li><button class="transparent-btn">HTML</button></li>
-                                <li><button class="transparent-btn">Bootstrap</button></li>
-                                <li><button class="transparent-btn">Ruby</button></li>
-                            </ul>
-                        </div>
-                        <div class="art-main-btn-container">
-                            <button class="primarybtn">See Project</button>
-                        </div>
-                    </div>
-                </section>
+                <section class="professional_art_printing-section" id="professional_art_printing-section2"></section>
             </section>
         </section>
 
