--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
 
                         </div>
                         <div class="form_btn_container">
+                            <div id="errorMessage"></div>
+                            <div id="successMsg"></div>
                             <button class="miniprimarybtn">Get in touch</button>
                         </div>
                     </form>
